--- a/public/style.css
+++ b/public/style.css
@@ -89,7 +89,6 @@
     font-size: 16px;
 }
 
-
 .connect-wallet {
     display: none;
 }
@@ -125,6 +124,28 @@
     max-height: 90vh;
     display: flex;
     border-radius: 20px;
+}
+
+
+
+.popup-main {
+    position:fixed;
+    background: var(--box-bg);
+    width: 80%;
+    height: auto;
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%);
+    margin: 0px 0px 2rem;
+    box-shadow: rgba(47, 128, 237, 0.05) 0px 4px 8px 0px;
+    padding: 0px;
+    width: 50vw;
+    overflow: hidden;
+    align-self: center;
+    max-width: 720px;
+    max-height: 90vh;
+    display: flex;
+    border-radius: 5px;
 }
 
 .close-modal {
@@ -269,6 +290,7 @@
     justify-content: center;
 }
 
+
 /*
 ====================================
 Medium Screen - Others
@@ -319,6 +341,10 @@ Medium Screen - Others
             font-size: 20px;
         }
 
+        .button {
+            width: 140px;
+        }
+
         .copyright {
             font-size: 12px;
         }
@@ -349,6 +375,10 @@ Medium Screen - Others
             width: 90%
         }
 
+        .button {
+            width: 110px;
+        }
+
         .ljXtWJ[data-reach-dialog-content] {
             max-width: 100%;
             width: 100%;
@@ -377,3 +407,43 @@ Medium Screen - Others
             font-size: 16px;
         }
     }
+
+
+
+.test {
+    background: rgba(14, 10, 10, 0.1);
+    /*mix-blend-mode: darken;*/
+    /*opacity: 0.9;*/
+    border-radius: 600px;
+    width: 100%;
+    height: 100%;
+    padding: 5px;
+
+    /*position: absolute;*/
+}
+
+.tvl_test
+{
+    /*font-family: 'Mulish';!*! font-style: normal; *!!*! font-weight: 300; *!*/
+    /*font-style: normal;*/
+    /*font-weight: bolder;*/
+    text-align: center;
+    font-size: 16px;
+    line-height: 15px;
+    color: #FFF !important;
+    /*opacity: 0.8;*/
+    z-index: 1;
+    margin: 5px;
+    /*margin-left: 15px;*/
+}
+
+.testNumber
+{
+    padding-left: 10px;
+    font-family: 'Mulish';
+    font-style: normal;
+    /*font-weight: bolder;*/
+    line-height: 15px;
+    color: #FFF !important;
+    z-index: 1;
+}
